# internal/router/login/login_router.go
@@ -9,7 +9,7 @@ import (
 
 func GetRouter(router *gin.Engine, db *gorm.DB) *gin.Engine {
 	control := present.Init(db)
-	webV1 := router.Group("sien").Group("v1.0")
+	webV1 := router.Group("ai-writer").Group("v1.0")
 	{
 		webV1.POST("login", control.Login)
 		webV1.POST("refresh", control.Refresh)
